refactor: replace Font Awesome icons with custom icon spans and update related styles for consistency

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zigao Wang | 王子高</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="css/lib/devicon.min.css">
-    <link rel="stylesheet" href="css/lib/all.min.css">
+    <link rel="stylesheet" href="css/custom-icons.css">
 </head>
 <body>
     <div class="language-toggle">
@@ -30,7 +29,7 @@
                         <span class="zh-content">学生开发者 & 科技爱好者</span>
                     </p>
                     <span class="location-text">
-                        <i class="fas fa-map-marker-alt"></i> 
+                        <span class="icon icon-map-marker-alt icon-primary"></span>
                         <span class="en-content">Shanghai, China</span>
                         <span class="zh-content">中国，上海</span>
                     </span>
@@ -52,19 +51,19 @@
 
         <section class="social-links">
             <a href="https://github.com/ZigaoWang" target="_blank" class="social-link github">
-                <i class="fab fa-github"></i>
+                <span class="icon icon-github"></span>
             </a>
             <a href="https://zigao.cc" target="_blank" class="social-link blog">
-                <i class="fas fa-blog"></i>
+                <span class="icon icon-blog"></span>
             </a>
             <a href="mailto:a@zigao.wang" class="social-link email">
-                <i class="fas fa-envelope"></i>
+                <span class="icon icon-envelope"></span>
             </a>
             <a href="https://twitter.com/zigaow" target="_blank" class="social-link twitter">
-                <i class="fab fa-x-twitter"></i>
+                <span class="icon icon-x-twitter"></span>
             </a>
             <a href="https://monkeytype.com/profile/ZigaoWang" target="_blank" class="social-link monkeytype">
-                <i class="fas fa-keyboard"></i>
+                <span class="icon icon-keyboard"></span>
             </a>
         </section>
 
@@ -74,14 +73,14 @@
                 <span class="zh-content">我使用的技术</span>
             </h2>
             <div class="tech-icons">
-                <i class="devicon-swift-plain colored" title="Swift"></i>
-                <i class="devicon-python-plain colored" title="Python"></i>
-                <i class="devicon-javascript-plain colored" title="JavaScript"></i>
-                <i class="devicon-nodejs-plain colored" title="Node.js"></i>
-                <i class="devicon-go-plain colored" title="Go"></i>
-                <i class="devicon-html5-plain colored" title="HTML5"></i>
-                <i class="devicon-css3-plain colored" title="CSS3"></i>
-                <i class="devicon-cplusplus-plain colored" title="C++"></i>
+                <span class="icon icon-swift icon-lg" title="Swift"></span>
+                <span class="icon icon-python icon-lg" title="Python"></span>
+                <span class="icon icon-javascript icon-lg" title="JavaScript"></span>
+                <span class="icon icon-nodejs icon-lg" title="Node.js"></span>
+                <span class="icon icon-go icon-lg" title="Go"></span>
+                <span class="icon icon-html5 icon-lg" title="HTML5"></span>
+                <span class="icon icon-css3 icon-lg" title="CSS3"></span>
+                <span class="icon icon-cplusplus icon-lg" title="C++"></span>
             </div>
         </section>
 
@@ -102,12 +101,12 @@
                         <div class="project-actions">
                             <div class="project-links">
                                 <a href="https://apps.apple.com/us/app/zap-notes/id6740298881" target="_blank" class="store-link">
-                                    <i class="fab fa-app-store-ios"></i> 
+                                    <span class="icon icon-app-store-ios"></span>
                                     <span class="en-content">App Store</span>
                                     <span class="zh-content">App Store</span>
                                 </a>
                                 <a href="https://github.com/ZigaoWang/ZapNotesApp" target="_blank" class="github-link">
-                                    <i class="fab fa-github"></i> 
+                                    <span class="icon icon-github"></span>
                                     <span class="en-content">GitHub</span>
                                     <span class="zh-content">GitHub</span>
                                 </a>
@@ -127,12 +126,12 @@
                         <div class="project-actions">
                             <div class="project-links">
                                 <a href="https://apps.apple.com/us/app/zap-know-ai/id6745419831" target="_blank" class="store-link">
-                                    <i class="fab fa-app-store-ios"></i> 
+                                    <span class="icon icon-app-store-ios"></span>
                                     <span class="en-content">App Store</span>
                                     <span class="zh-content">App Store</span>
                                 </a>
                                 <a href="https://github.com/ZigaoWang/ZapKnowAI-iOS" target="_blank" class="github-link">
-                                    <i class="fab fa-github"></i> 
+                                    <span class="icon icon-github"></span>
                                     <span class="en-content">GitHub</span>
                                     <span class="zh-content">GitHub</span>
                                 </a>
@@ -152,12 +151,12 @@
                         <div class="project-actions">
                             <div class="project-links">
                                 <a href="https://apps.apple.com/us/app/go-or-no/id6744859953" target="_blank" class="store-link">
-                                    <i class="fab fa-app-store-ios"></i> 
+                                    <span class="icon icon-app-store-ios"></span>
                                     <span class="en-content">App Store</span>
                                     <span class="zh-content">App Store</span>
                                 </a>
                                 <a href="https://github.com/ZigaoWang/go-or-no" target="_blank" class="github-link">
-                                    <i class="fab fa-github"></i> 
+                                    <span class="icon icon-github"></span>
                                     <span class="en-content">GitHub</span>
                                     <span class="zh-content">GitHub</span>
                                 </a>
@@ -177,19 +176,19 @@
                         <div class="project-actions">
                             <div class="preview-link">
                                 <a href="https://daztab.com" target="_blank">
-                                    <i class="fas fa-external-link-alt"></i> 
+                                    <span class="icon icon-external-link-alt"></span>
                                     <span class="en-content">Preview at daztab.com</span>
                                     <span class="zh-content">在 daztab.com 预览</span>
                                 </a>
                             </div>
                             <div class="project-links">
                                 <a href="https://chromewebstore.google.com/detail/daztab/bagdffmnpgghcehadgmhcppaphpdfmbb" target="_blank" class="store-link">
-                                    <i class="fab fa-chrome"></i> 
+                                    <span class="icon icon-chrome"></span>
                                     <span class="en-content">Chrome Store</span>
                                     <span class="zh-content">Chrome 商店</span>
                                 </a>
                                 <a href="https://github.com/ZigaoWang/daztab" target="_blank" class="github-link">
-                                    <i class="fab fa-github"></i> 
+                                    <span class="icon icon-github"></span>
                                     <span class="en-content">GitHub</span>
                                     <span class="zh-content">GitHub</span>
                                 </a>
