--- a/index.html
+++ b/index.html
@@ -4,11 +4,97 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zigao Wang | 王子高</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="css/custom-icons.css">
+    <!-- Preload critical fonts -->
+    <link rel="preload" href="fonts/inter/inter-600.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="fonts/inter/inter-400.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="zigao.jpg" as="image">
+    <style>
+        /* Critical CSS for faster rendering */
+        :root {
+            --primary-color: #0071e3;
+            --bg-color: #000;
+            --text-primary: #f5f5f7;
+            --text-secondary: #a1a1a6;
+        }
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, 'SF Pro Display', 'Inter', sans-serif;
+            background-color: var(--bg-color);
+            color: var(--text-primary);
+            margin: 0;
+            padding: 0;
+        }
+        .container {
+            max-width: 980px;
+            margin: 0 auto;
+            padding: 5rem 2rem;
+        }
+        .profile {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            gap: 4rem;
+            margin-bottom: 4rem;
+            padding: 1rem 0;
+            max-width: 900px;
+            margin-left: auto;
+            margin-right: auto;
+            justify-content: center;
+        }
+        .profile-img {
+            width: 200px;
+            height: 200px;
+            border-radius: 50%;
+            object-fit: cover;
+        }
+        .gradient-text {
+            font-size: 56px;
+            line-height: 1.1;
+            font-weight: 600;
+            margin-bottom: 0.5rem;
+            padding-bottom: 3px;
+        }
+        .language-toggle {
+            position: absolute;
+            top: 2rem;
+            right: 2rem;
+            display: flex;
+            z-index: 100;
+            background: rgba(28, 28, 30, 0.7);
+            border-radius: 24px;
+            padding: 3px;
+            border: 1px solid rgba(255, 255, 255, 0.1);
+        }
+        @media (max-width: 768px) {
+            .profile {
+                flex-direction: column;
+                gap: 2rem;
+                text-align: center;
+                padding: 0;
+            }
+            .profile-img {
+                width: 160px;
+                height: 160px;
+            }
+            .gradient-text {
+                font-size: 40px;
+            }
+        }
+    </style>
+    <!-- Critical CSS -->
+    <link rel="stylesheet" href="css/fonts.css">
+    <!-- Non-critical CSS with media attribute -->
+    <link rel="stylesheet" href="styles.css" media="print" onload="this.media='all'">
+    <link rel="stylesheet" href="css/custom-icons.css" media="print" onload="this.media='all'">
+    <!-- No-JS fallback -->
+    <noscript>
+        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="css/custom-icons.css">
+    </noscript>
+    <meta name="description" content="Zigao Wang - Student Developer & Tech Enthusiast. Shanghai, China. Projects include Zap Notes, Zap Know AI, Go or No, and DazTab.">
+    <meta name="theme-color" content="#000000">
 </head>
 <body>
-    <div class="language-toggle">
+    <div class="language-toggle" data-active="en">
         <button class="language-btn active" data-lang="en">EN</button>
         <button class="language-btn" data-lang="zh">中文</button>
     </div>
