feat: add aria-labels to social links for improved accessibility

--- a/index.html
+++ b/index.html
@@ -136,19 +136,19 @@
         </header>
 
         <section class="social-links">
-            <a href="https://github.com/ZigaoWang" target="_blank" class="social-link github">
+            <a href="https://github.com/ZigaoWang" target="_blank" class="social-link github" aria-label="GitHub Profile">
                 <span class="icon icon-github"></span>
             </a>
-            <a href="https://zigao.cc" target="_blank" class="social-link blog">
+            <a href="https://zigao.cc" target="_blank" class="social-link blog" aria-label="Personal Blog">
                 <span class="icon icon-blog"></span>
             </a>
-            <a href="mailto:a@zigao.wang" class="social-link email">
+            <a href="mailto:a@zigao.wang" class="social-link email" aria-label="Email Contact">
                 <span class="icon icon-envelope"></span>
             </a>
-            <a href="https://twitter.com/zigaow" target="_blank" class="social-link twitter">
+            <a href="https://twitter.com/zigaow" target="_blank" class="social-link twitter" aria-label="Twitter Profile">
                 <span class="icon icon-x-twitter"></span>
             </a>
-            <a href="https://monkeytype.com/profile/ZigaoWang" target="_blank" class="social-link monkeytype">
+            <a href="https://monkeytype.com/profile/ZigaoWang" target="_blank" class="social-link monkeytype" aria-label="MonkeyType Profile">
                 <span class="icon icon-keyboard"></span>
             </a>
         </section>
