fix: simplify loading and better performance

--- a/index.html
+++ b/index.html
@@ -82,14 +82,9 @@
     </style>
     <!-- Critical CSS -->
     <link rel="stylesheet" href="css/fonts.css">
-    <!-- Non-critical CSS with media attribute -->
-    <link rel="stylesheet" href="styles.css" media="print" onload="this.media='all'">
-    <link rel="stylesheet" href="css/custom-icons.css" media="print" onload="this.media='all'">
-    <!-- No-JS fallback -->
-    <noscript>
-        <link rel="stylesheet" href="styles.css">
-        <link rel="stylesheet" href="css/custom-icons.css">
-    </noscript>
+    <!-- Non-critical CSS -->
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/custom-icons.css">
     <meta name="description" content="Zigao Wang - Student Developer & Tech Enthusiast. Shanghai, China. Projects include Zap Notes, Zap Know AI, Go or No, and DazTab.">
     <meta name="theme-color" content="#000000">
 </head>
