--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <!-- Non-critical CSS -->
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="css/custom-icons.css">
-    <meta name="description" content="Zigao Wang - Student Developer & Tech Enthusiast. Shanghai, China. Projects include Zap Notes, Zap Know AI, Go or No, and DazTab.">
+    <meta name="description" content="Zigao Wang - Student Developer & Tech Enthusiast. Shanghai, China. Projects include Zap Notes, Zap Know AI, Go or No.">
     <meta name="theme-color" content="#000000">
 </head>
 <body>
@@ -237,38 +237,6 @@
                                     <span class="zh-content">App Store</span>
                                 </a>
                                 <a href="https://github.com/ZigaoWang/go-or-no" target="_blank" class="github-link">
-                                    <span class="icon icon-github"></span>
-                                    <span class="en-content">GitHub</span>
-                                    <span class="zh-content">GitHub</span>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="project-card">
-                    <div class="project-content">
-                        <img src="logo/daztab.jpg" alt="DazTab" class="project-logo">
-                        <div class="project-info">
-                            <h3>DazTab</h3>
-                            <p class="en-content">A chrome extension that replaces your new tab page into a macOS-styled dashboard.</p>
-                            <p class="zh-content">一个 Chrome 扩展，将您的新标签页变成 macOS 风格的仪表盘。</p>
-                        </div>
-                        <div class="project-actions">
-                            <div class="preview-link">
-                                <a href="https://daztab.com" target="_blank">
-                                    <span class="icon icon-external-link-alt"></span>
-                                    <span class="en-content">Preview at daztab.com</span>
-                                    <span class="zh-content">在 daztab.com 预览</span>
-                                </a>
-                            </div>
-                            <div class="project-links">
-                                <a href="https://chromewebstore.google.com/detail/daztab/bagdffmnpgghcehadgmhcppaphpdfmbb" target="_blank" class="store-link">
-                                    <span class="icon icon-chrome"></span>
-                                    <span class="en-content">Chrome Store</span>
-                                    <span class="zh-content">Chrome 商店</span>
-                                </a>
-                                <a href="https://github.com/ZigaoWang/daztab" target="_blank" class="github-link">
                                     <span class="icon icon-github"></span>
                                     <span class="en-content">GitHub</span>
                                     <span class="zh-content">GitHub</span>
