fix: enhance SEO and metadata

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zigao Wang | 王子高</title>
+    <title>Zigao Wang 王子高 | Developer & Tech Enthusiast in Shanghai</title>
     <link rel="icon" type="image/png" href="/favicon/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="/favicon/favicon.svg" />
     <link rel="shortcut icon" href="/favicon/favicon.ico" />
@@ -91,7 +91,36 @@
     <!-- Non-critical CSS -->
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="css/custom-icons.css">
-    <meta name="description" content="Zigao Wang - Student Developer & Tech Enthusiast. Shanghai, China. Projects include Zap Notes, Zap Know AI, Go or No.">
+    <meta name="description" content="Zigao Wang (王子高) — student developer and tech enthusiast in Shanghai, China. Projects: Zap Notes, Zap Know AI, Go or No. Connect via a@zigao.wang.">
+    <meta property="og:title" content="Zigao Wang 王子高 | Developer & Tech Enthusiast in Shanghai">
+    <meta property="og:description" content="Portfolio of Zigao Wang (王子高), student developer in Shanghai. Explore projects like Zap Notes, Zap Know AI, and Go or No.">
+    <meta property="og:url" content="https://zigao.wang/">
+    <meta property="og:type" content="website">
+    <meta property="og:locale" content="en_US">
+    <meta property="og:locale:alternate" content="zh_CN">
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Zigao Wang",
+      "alternateName": ["王子高", "Zigao", "ZigaoWang"],
+      "url": "https://zigao.wang/",
+      "jobTitle": "Student Developer",
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "Shanghai",
+        "addressCountry": "China"
+      },
+      "email": "mailto:a@zigao.wang",
+      "sameAs": [
+        "https://github.com/ZigaoWang",
+        "https://twitter.com/zigaow",
+        "https://zigao.cc",
+        "https://monkeytype.com/profile/ZigaoWang",
+        "https://www.linkedin.com/in/zigao-wang/"
+      ]
+    }
+    </script>
     <meta name="theme-color" content="#000000">
 </head>
 <body>
