feat: compress images to webp

--- a/index.html
+++ b/index.html
@@ -162,12 +162,18 @@
                     </span>
                     <div class="organizations">
                         <a href="https://github.com/pacerclub" target="_blank" class="org-badge">
-                            <img src="logo/pacerclub.jpg" alt="Pacer Club" class="org-logo">
+                            <picture>
+                                <source srcset="logo/pacerclub.webp" type="image/webp">
+                                <img src="logo/pacerclub.jpg" alt="Pacer Club" class="org-logo" width="42" height="42" loading="lazy">
+                            </picture>
                             <span class="en-content">Founder of Pacer Club</span>
                             <span class="zh-content">Pacer Club 创始人</span>
                         </a>
                         <a href="https://hackclub.com" target="_blank" class="org-badge">
-                            <img src="logo/hackclub.jpg" alt="Hack Club" class="org-logo">
+                            <picture>
+                                <source srcset="logo/hackclub.webp" type="image/webp">
+                                <img src="logo/hackclub.jpg" alt="Hack Club" class="org-logo" width="42" height="42" loading="lazy">
+                            </picture>
                             <span class="en-content">Hack Club Member</span>
                             <span class="zh-content">Hack Club 成员</span>
                         </a>
@@ -219,7 +225,10 @@
             <div class="project-grid">
                 <div class="project-card">
                     <div class="project-content">
-                        <img src="logo/zapnotes.jpg" alt="ZapNotes" class="project-logo">
+                        <picture>
+                            <source srcset="logo/zapnotes.webp" type="image/webp">
+                            <img src="logo/zapnotes.jpg" alt="ZapNotes" class="project-logo" width="114" height="114" loading="lazy">
+                        </picture>
                         <div class="project-info">
                             <h3>Zap Notes</h3>
                             <p class="en-content">An AI-powered note-taking app for recording and analyzing thoughts, ideas, and tasks.</p>
@@ -244,7 +253,10 @@
 
                 <div class="project-card">
                     <div class="project-content">
-                        <img src="logo/zapknowai.jpg" alt="ZapKnow AI" class="project-logo">
+                        <picture>
+                            <source srcset="logo/zapknowai.webp" type="image/webp">
+                            <img src="logo/zapknowai.jpg" alt="ZapKnow AI" class="project-logo" width="114" height="114" loading="lazy">
+                        </picture>
                         <div class="project-info">
                             <h3>Zap Know AI</h3>
                             <p class="en-content">An AI app for trusted research that helps you find accurate answers backed by real papers.</p>
@@ -269,7 +281,10 @@
 
                 <div class="project-card">
                     <div class="project-content">
-                        <img src="logo/goorno.jpg" alt="Go or No" class="project-logo">
+                        <picture>
+                            <source srcset="logo/goorno.webp" type="image/webp">
+                            <img src="logo/goorno.jpg" alt="Go or No" class="project-logo" width="114" height="114" loading="lazy">
+                        </picture>
                         <div class="project-info">
                             <h3>Go or No</h3>
                             <p class="en-content">An AR app for visually impaired users, helping you navigate your environment more safely and confidently.</p>
