--- a/index.html
+++ b/index.html
@@ -114,13 +114,9 @@
             src: url('fonts/inter/inter-600.woff2') format('woff2');
         }
     </style>
-    <!-- Non-critical CSS - loaded async -->
-    <link rel="stylesheet" href="styles.css" media="print" onload="this.media='all'">
-    <link rel="stylesheet" href="css/custom-icons.css" media="print" onload="this.media='all'">
-    <noscript>
-        <link rel="stylesheet" href="styles.css">
-        <link rel="stylesheet" href="css/custom-icons.css">
-    </noscript>
+    <!-- CSS -->
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/custom-icons.css">
     <meta name="description" content="Zigao Wang (王子高) — student developer and tech enthusiast in Shanghai, China. Projects: Zap Notes, Zap Know AI, Go or No. Connect via a@zigao.wang.">
     <meta property="og:title" content="Zigao Wang 王子高 | Developer & Tech Enthusiast in Shanghai">
     <meta property="og:description" content="Portfolio of Zigao Wang (王子高), student developer in Shanghai. Explore projects like Zap Notes, Zap Know AI, and Go or No.">
