--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
       gtag('js', new Date());
       gtag('config', 'G-WPB8T94YE5');
     </script>
-    <!-- Preload critical fonts -->
-    <link rel="preload" href="fonts/inter/inter-600.woff2" as="font" type="font/woff2" crossorigin>
-    <link rel="preload" href="fonts/inter/inter-400.woff2" as="font" type="font/woff2" crossorigin>
+    <!-- Preload critical resources -->
+    <link rel="preload" href="styles.css" as="style">
+    <link rel="preload" href="css/custom-icons.css" as="style">
     <link rel="preload" href="zigao.webp" as="image" fetchpriority="high">
     <style>
         /* Critical CSS for faster rendering */
@@ -97,20 +97,20 @@
         [lang="en"] .zh-content { display: none; }
         [lang="zh"] .en-content { display: none; }
     </style>
-    <!-- Inline critical fonts (only weights used) -->
+    <!-- Inline critical fonts (optional = no layout shift) -->
     <style>
         @font-face {
             font-family: 'Inter';
             font-style: normal;
             font-weight: 400;
-            font-display: swap;
+            font-display: optional;
             src: url('fonts/inter/inter-400.woff2') format('woff2');
         }
         @font-face {
             font-family: 'Inter';
             font-style: normal;
             font-weight: 600;
-            font-display: swap;
+            font-display: optional;
             src: url('fonts/inter/inter-600.woff2') format('woff2');
         }
     </style>
