--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             --text-secondary: #a1a1a6;
         }
         body {
-            font-family: -apple-system, BlinkMacSystemFont, 'SF Pro Display', 'Inter', sans-serif;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
             background-color: var(--bg-color);
             color: var(--text-primary);
             margin: 0;
@@ -96,23 +96,6 @@
         /* Hide non-active language immediately */
         [lang="en"] .zh-content { display: none; }
         [lang="zh"] .en-content { display: none; }
-    </style>
-    <!-- Inline critical fonts (optional = no layout shift) -->
-    <style>
-        @font-face {
-            font-family: 'Inter';
-            font-style: normal;
-            font-weight: 400;
-            font-display: optional;
-            src: url('fonts/inter/inter-400.woff2') format('woff2');
-        }
-        @font-face {
-            font-family: 'Inter';
-            font-style: normal;
-            font-weight: 600;
-            font-display: optional;
-            src: url('fonts/inter/inter-600.woff2') format('woff2');
-        }
     </style>
     <!-- CSS -->
     <link rel="stylesheet" href="styles.css">
