feat: add out loud and avoidxray.com project

--- a/index.html
+++ b/index.html
@@ -307,6 +307,56 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="project-card">
+                    <div class="project-content">
+                        <img src="logo/outloud.svg" alt="Out Loud" class="project-logo" width="114" height="114" loading="lazy">
+                        <div class="project-info">
+                            <h3>Out Loud</h3>
+                            <p class="en-content">Voice recording with real-time transcription and AI analysis for capturing and processing your thoughts.</p>
+                            <p class="zh-content">实时转录和 AI 分析的语音录制应用，用于捕捉和处理您的想法。</p>
+                        </div>
+                        <div class="project-actions">
+                            <div class="project-links">
+                                <a href="https://out-loud.app/" target="_blank" class="store-link">
+                                    <span class="icon icon-chrome"></span>
+                                    <span class="en-content">Website</span>
+                                    <span class="zh-content">网站</span>
+                                </a>
+                                <a href="https://github.com/ZigaoWang/out-loud-app" target="_blank" class="github-link">
+                                    <span class="icon icon-github"></span>
+                                    <span class="en-content">GitHub</span>
+                                    <span class="zh-content">GitHub</span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-card">
+                    <div class="project-content">
+                        <img src="logo/avoidxray-padded.png" alt="AvoidXray" class="project-logo" width="114" height="114" loading="lazy">
+                        <div class="project-info">
+                            <h3>AvoidXray</h3>
+                            <p class="en-content">A community platform for film photography enthusiasts to protect, share, and discover analog photography.</p>
+                            <p class="zh-content">胶片摄影爱好者社区平台，用于保护、分享和发现模拟摄影作品。</p>
+                        </div>
+                        <div class="project-actions">
+                            <div class="project-links">
+                                <a href="https://avoidxray.com/" target="_blank" class="store-link">
+                                    <span class="icon icon-chrome"></span>
+                                    <span class="en-content">Website</span>
+                                    <span class="zh-content">网站</span>
+                                </a>
+                                <a href="https://github.com/ZigaoWang/avoidxray.com" target="_blank" class="github-link">
+                                    <span class="icon icon-github"></span>
+                                    <span class="en-content">GitHub</span>
+                                    <span class="zh-content">GitHub</span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
 
