fix: avoidxray.com name

--- a/index.html
+++ b/index.html
@@ -335,9 +335,9 @@
 
                 <div class="project-card">
                     <div class="project-content">
-                        <img src="logo/avoidxray-padded.png" alt="AvoidXray" class="project-logo" width="114" height="114" loading="lazy">
+                        <img src="logo/avoidxray-padded.png" alt="AvoidXRay" class="project-logo" width="114" height="114" loading="lazy">
                         <div class="project-info">
-                            <h3>AvoidXray</h3>
+                            <h3>AvoidXRay.com</h3>
                             <p class="en-content">A community platform for film photography enthusiasts to protect, share, and discover analog photography.</p>
                             <p class="zh-content">胶片摄影爱好者社区平台，用于保护、分享和发现模拟摄影作品。</p>
                         </div>
